--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -57,12 +57,26 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App\DashboardEmpresa\Partials\empresaDashboard.html" />
+    <Content Include="App\DashboardEmpresa\Partials\empresaContenido.html" />
+    <Content Include="App\DashboardEmpresa\Partials\empresaMenu.html" />
+    <Content Include="App\DashboardProfesional\Partials\profesionalDashboard.html" />
+    <Content Include="App\DashboardProfesional\Partials\profesionalContenido.html" />
+    <Content Include="App\DashboardProfesional\Partials\profesionalMenu.html" />
     <Content Include="App\Home\Partials\home.html" />
     <Content Include="App\Home\Partials\homeMenu.html" />
-    <Content Include="App\Home\Partials\infoMenu.html" />
-    <Content Include="App\Home\Partials\ofertasHome.html" />
+    <Content Include="App\Home\Partials\homeInfo.html" />
+    <Content Include="App\Home\Partials\homeOfertas.html" />
+    <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
+    <Content Include="App\Ofertas\Partials\ofertasList.html" />
+    <Content Include="App\Profesionales\Partials\profesionalPerfil.html" />
+    <Content Include="App\Seguridad\Partials\registroEmpresa.html" />
+    <Content Include="App\Seguridad\Partials\registroProfesional.html" />
+    <Content Include="App\TiposContrato\tiposContratoCtrl.js" />
+    <Content Include="App\TiposContrato\tiposContratoDF.js" />
     <Content Include="App\TiposDisponibilidad\tiposDisponibilidadCtrl.js" />
     <Content Include="App\TiposDisponibilidad\tiposDisponibilidadDF.js" />
+    <Content Include="favicon.ico" />
     <Content Include="libs\angular\angular-animate\1.5.0\angular-animate.js" />
     <Content Include="libs\angular\angular-animate\1.5.0\angular-animate.min.js" />
     <Content Include="libs\angular\angular-animate\angular-animate.js" />
@@ -129,8 +143,8 @@
     <Content Include="libs\angular\angular-ui-grid\ui-grid.svg" />
     <Content Include="libs\angular\angular-ui-map\ui-map.js" />
     <Content Include="libs\angular\angular-ui-router-extras\ct-ui-router-extras.js" />
-    <Content Include="libs\angular\angular-ui-router\release\angular-ui-router.js" />
-    <Content Include="libs\angular\angular-ui-router\release\angular-ui-router.min.js" />
+    <Content Include="libs\angular\angular-ui-router\angular-ui-router.js" />
+    <Content Include="libs\angular\angular-ui-router\angular-ui-router.min.js" />
     <Content Include="libs\angular\angular-ui-select\basicSearchFilter.js" />
     <Content Include="libs\angular\angular-ui-select\select.css" />
     <Content Include="libs\angular\angular-ui-select\select.js" />
@@ -151,7 +165,6 @@
     <Content Include="libs\angular\angular\1.5.0\angular.min.js" />
     <Content Include="libs\angular\angular\angular.js" />
     <Content Include="libs\angular\angular\angular.min.js" />
-    <Content Include="libs\angular\daypilot\daypilot-all.min.js" />
     <Content Include="libs\angular\jquery.easy-pie-chart\dist\angular.easypiechart.js" />
     <Content Include="libs\angular\mdTable\md-data-table.css" />
     <Content Include="libs\angular\mdTable\md-data-table.js" />
@@ -281,12 +294,6 @@
   <ItemGroup>
     <Content Include="App\Blobs\blobsDataFactory.js" />
     <Content Include="App\Configuraciones\configSvc.js" />
-    <Content Include="App\DashboardProfesional\dashboardCtrl.js" />
-    <Content Include="App\DashboardProfesional\indexCtrl.js" />
-    <Content Include="App\DashboardProfesional\Partials\Dasboard.html" />
-    <Content Include="App\DashboardProfesional\Partials\Dasboard_old.html" />
-    <Content Include="App\DashboardProfesional\Partials\home.html" />
-    <Content Include="App\DashboardProfesional\Partials\home_old.html" />
     <Content Include="App\Empresas\empresasCtrl.js" />
     <Content Include="App\Empresas\empresasDF.js" />
     <Content Include="App\Profesionales\profesionalesCtrl.js" />
@@ -438,10 +445,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App\DashboardEmpresa\Partials\" />
     <Folder Include="App\Empresas\Partials\" />
-    <Folder Include="App\Ofertas\Partials\" />
-    <Folder Include="App\Profesionales\Partials\" />
+    <Folder Include="App\TiposContrato\Partials\" />
+    <Folder Include="App\TiposDisponibilidad\Partials\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
