Agrego los diseños de ezequiel, guentes, css, etc

--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -86,13 +86,22 @@
     <Content Include="App\TiposDisponibilidad\tiposDisponibilidadCtrl.js" />
     <Content Include="App\TiposDisponibilidad\tiposDisponibilidadDF.js" />
     <Content Include="App\TiposIdentificacion\TiposIdentificacionDF.js" />
+    <Content Include="css\styles.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\fonts\unmundo.svg" />
+    <Content Include="fonts\fonts\icomoon.svg" />
     <Content Include="fonts\style.css" />
+    <Content Include="img\11.jpg" />
+    <Content Include="img\13.jpg" />
+    <Content Include="img\15.jpeg" />
+    <Content Include="img\logo.png" />
     <Content Include="img\logo2.png" />
     <Content Include="img\logo3.png" />
     <Content Include="img\logo4.png" />
     <Content Include="img\ny_street.jpg" />
+    <Content Include="img\oc.jpg" />
+    <Content Include="img\perfil.jpg" />
+    <Content Include="js\jquery.js" />
+    <Content Include="js\smoothscroll.js" />
     <Content Include="libs\angular\angular-animate\1.5.0\angular-animate.js" />
     <Content Include="libs\angular\angular-animate\1.5.0\angular-animate.min.js" />
     <Content Include="libs\angular\angular-animate\angular-animate.js" />
@@ -300,9 +309,10 @@
     <Content Include="libs\jquery\jquery.easy-pie-chart\.DS_Store" />
     <Content Include="libs\jquery\jquery.sparkline\.DS_Store" />
     <Content Include="libs\jquery\waves\dist\waves.min.js.map" />
-    <Content Include="fonts\fonts\unmundo.eot" />
-    <Content Include="fonts\fonts\unmundo.ttf" />
-    <Content Include="fonts\fonts\unmundo.woff" />
+    <Content Include="css\styles.css.map" />
+    <Content Include="fonts\fonts\icomoon.eot" />
+    <Content Include="fonts\fonts\icomoon.ttf" />
+    <Content Include="fonts\fonts\icomoon.woff" />
     <Content Include="fonts\selection.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -334,30 +344,6 @@
     <Content Include="App\Seguridad\styleLoginCss.css" />
     <Content Include="App\Seguridad\tokenDataFactory.js" />
     <Content Include="App\vLaboralApp.js" />
-    <Content Include="img\a0.jpg" />
-    <Content Include="img\a1.jpg" />
-    <Content Include="img\a10.jpg" />
-    <Content Include="img\a2.jpg" />
-    <Content Include="img\a3.jpg" />
-    <Content Include="img\a4.jpg" />
-    <Content Include="img\a5.jpg" />
-    <Content Include="img\a6.jpg" />
-    <Content Include="img\a7.jpg" />
-    <Content Include="img\a8.jpg" />
-    <Content Include="img\a9.jpg" />
-    <Content Include="img\bg.png" />
-    <Content Include="img\c0.jpg" />
-    <Content Include="img\c1.jpg" />
-    <Content Include="img\c2.jpg" />
-    <Content Include="img\c3.jpg" />
-    <Content Include="img\c4.jpg" />
-    <Content Include="img\c5.jpg" />
-    <Content Include="img\c6.jpg" />
-    <Content Include="img\c7.jpg" />
-    <Content Include="img\c8.jpg" />
-    <Content Include="img\c9.jpg" />
-    <Content Include="img\logo.png" />
-    <Content Include="img\p0.jpg" />
     <Content Include="index.html" />
     <Content Include="scripts\app.ctrl.js" />
     <Content Include="scripts\app.src.js" />
@@ -396,7 +382,6 @@
     <Content Include="styles\app.min.css" />
     <Content Include="styles\font.css" />
     <Content Include="styles\material-design-icons.css" />
-    <Content Include="styles\styles.css" />
     <Content Include="views\aside.html" />
     <Content Include="views\content.html" />
     <Content Include="views\layout.html" />
