--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -73,6 +73,8 @@
     <Content Include="App\Home\Partials\homeInfo.html" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
+    <Content Include="App\Postulantes\postulantesCtrl.js" />
+    <Content Include="App\Postulantes\postulantesDF.js" />
     <Content Include="App\Profesionales\Partials\profesionalPerfil.html" />
     <Content Include="App\Puestos\Partials\puestosAdd.html" />
     <Content Include="App\Puestos\puestosCtrl.js" />
@@ -453,6 +455,7 @@
   <ItemGroup>
     <Folder Include="App\Empresas\Partials\" />
     <Folder Include="App\Habilidades\Partials\" />
+    <Folder Include="App\Postulantes\Partials\" />
     <Folder Include="App\Requisitos\Partials\" />
     <Folder Include="App\TiposContrato\Partials\" />
     <Folder Include="App\TiposDisponibilidad\Partials\" />
