--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -71,9 +71,10 @@
     <Content Include="App\Home\Partials\home.html" />
     <Content Include="App\Home\Partials\homeMenu.html" />
     <Content Include="App\Home\Partials\homeInfo.html" />
-    <Content Include="App\Ofertas\Partials\ofertaDetalle.html" />
+    <Content Include="App\Ofertas\Partials\ofertaDetallePrueba.html" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
+    <Content Include="App\Ofertas\Partials\ofertaDetalle.html" />
     <Content Include="App\Postulantes\postulantesCtrl.js" />
     <Content Include="App\Postulantes\postulantesDF.js" />
     <Content Include="App\Profesionales\Partials\profesionalPerfil.html" />
@@ -314,11 +315,11 @@
     <Content Include="libs\jquery\jquery.easy-pie-chart\.DS_Store" />
     <Content Include="libs\jquery\jquery.sparkline\.DS_Store" />
     <Content Include="libs\jquery\waves\dist\waves.min.js.map" />
-    <Content Include="css\styles.css.map" />
     <Content Include="fonts\fonts\icomoon.eot" />
     <Content Include="fonts\fonts\icomoon.ttf" />
     <Content Include="fonts\fonts\icomoon.woff" />
     <Content Include="fonts\selection.json" />
+    <Content Include="css\styles.css.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
