--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -71,11 +71,16 @@
     <Content Include="App\EtapasOferta\etapasOfertaDF.js" />
     <Content Include="App\EtapasOferta\Partials\etapaOferta.html" />
     <Content Include="App\EtapasOferta\Partials\etapaOfertaAdd.html" />
+    <Content Include="App\ExperienciasLaborales\experienciasLaboralesCtrl.js" />
+    <Content Include="App\ExperienciasLaborales\experienciasLaboralesDF.js" />
+    <Content Include="App\FormacionesAcademicas\formacionesAcademicasCtrl.js" />
+    <Content Include="App\FormacionesAcademicas\formacionesAcademicasDF.js" />
     <Content Include="App\Habilidades\habilidadesCtrl.js" />
     <Content Include="App\Habilidades\habilidadesDF.js" />
     <Content Include="App\Home\Partials\home.html" />
     <Content Include="App\Home\Partials\homeMenu.html" />
     <Content Include="App\Home\Partials\homeInfo.html" />
+    <Content Include="App\Idiomas\IdiomasDF.js" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
     <Content Include="App\Ofertas\Partials\ofertaDetalle.html" />
@@ -477,7 +482,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App\ExperienciasLaborales\Partials\" />
+    <Folder Include="App\FormacionesAcademicas\Partials\" />
     <Folder Include="App\Habilidades\Partials\" />
+    <Folder Include="App\Idiomas\Partials\" />
     <Folder Include="App\Postulantes\Partials\" />
     <Folder Include="App\Requisitos\Partials\" />
     <Folder Include="App\TiposContrato\Partials\" />
