--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -88,6 +88,8 @@
     <Content Include="App\Home\Partials\homeInfo.html" />
     <Content Include="App\Idiomas\IdiomasCtrl.js" />
     <Content Include="App\Idiomas\IdiomasDF.js" />
+    <Content Include="App\Notificaciones\notificacionesCtrl.js" />
+    <Content Include="App\Notificaciones\notificacionesDF.js" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
     <Content Include="App\Ofertas\Partials\ofertaDetalle.html" />
@@ -494,6 +496,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App\Habilidades\Partials\" />
+    <Folder Include="App\Notificaciones\Partials\" />
     <Folder Include="App\Requisitos\Partials\" />
     <Folder Include="App\TiposContrato\Partials\" />
     <Folder Include="App\TiposDisponibilidad\Partials\" />
