--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -90,6 +90,7 @@
     <Content Include="App\Idiomas\IdiomasDF.js" />
     <Content Include="App\Notificaciones\notificacionesCtrl.js" />
     <Content Include="App\Notificaciones\notificacionesDF.js" />
+    <Content Include="App\Notificaciones\Partials\centroNotifiaciones.html" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
     <Content Include="App\Ofertas\Partials\ofertaDetalle.html" />
@@ -119,7 +120,6 @@
     <Content Include="App\TiposIdentificacion\TiposIdentificacionDF.js" />
     <Content Include="css\styles.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\fonts\icomoon.svg" />
     <Content Include="fonts\style.css" />
     <Content Include="img\11.jpg" />
     <Content Include="img\13.jpg" />
@@ -349,11 +349,8 @@
     <Content Include="libs\jquery\jquery.easy-pie-chart\.DS_Store" />
     <Content Include="libs\jquery\jquery.sparkline\.DS_Store" />
     <Content Include="libs\jquery\waves\dist\waves.min.js.map" />
-    <Content Include="fonts\fonts\icomoon.eot" />
-    <Content Include="fonts\fonts\icomoon.ttf" />
-    <Content Include="fonts\fonts\icomoon.woff" />
-    <Content Include="fonts\selection.json" />
     <Content Include="css\styles.css.map" />
+    <Content Include="fonts\selection.json" />
     <None Include="Properties\PublishProfiles\vlaboralweb.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -496,12 +493,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App\Habilidades\Partials\" />
-    <Folder Include="App\Notificaciones\Partials\" />
     <Folder Include="App\Requisitos\Partials\" />
     <Folder Include="App\TiposContrato\Partials\" />
     <Folder Include="App\TiposDisponibilidad\Partials\" />
     <Folder Include="App\TiposEtapasOferta\Partials\" />
     <Folder Include="App\TiposNivelesEstudio\Partials\" />
+    <Folder Include="fonts\fonts\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
