--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -90,6 +90,7 @@
     <Content Include="App\Idiomas\IdiomasDF.js" />
     <Content Include="App\Notificaciones\notificacionesCtrl.js" />
     <Content Include="App\Notificaciones\notificacionesDF.js" />
+    <Content Include="App\Configuraciones\hubProxySvc.js" />
     <Content Include="App\Notificaciones\Partials\centroNotifiaciones.html" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
@@ -293,6 +294,9 @@
     <Content Include="libs\jquery\bower-jvectormap\jquery-jvectormap-us-aea-en.js" />
     <Content Include="libs\jquery\bower-jvectormap\jquery-jvectormap-world-mill-en.js" />
     <Content Include="libs\jquery\bower-jvectormap\jquery-jvectormap.css" />
+    <Content Include="libs\jquery\bower-signalr-master\.gitignore" />
+    <Content Include="libs\jquery\bower-signalr-master\jquery.signalR.js" />
+    <Content Include="libs\jquery\bower-signalr-master\jquery.signalR.min.js" />
     <Content Include="libs\jquery\datatables\media\js\jquery.dataTables.min.js" />
     <Content Include="libs\jquery\flot-spline\js\jquery.flot.spline.min.js" />
     <Content Include="libs\jquery\flot.orderbars\js\jquery.flot.orderBars.js" />
@@ -351,6 +355,10 @@
     <Content Include="libs\jquery\waves\dist\waves.min.js.map" />
     <Content Include="css\styles.css.map" />
     <Content Include="fonts\selection.json" />
+    <Content Include="libs\jquery\bower-signalr-master\bower.json" />
+    <Content Include="libs\jquery\bower-signalr-master\LICENSE.md" />
+    <Content Include="libs\jquery\bower-signalr-master\package.json" />
+    <Content Include="libs\jquery\bower-signalr-master\README.md" />
     <None Include="Properties\PublishProfiles\vlaboralweb.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
