--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -93,6 +93,8 @@
     <Content Include="App\Notificaciones\notificacionesDF.js" />
     <Content Include="App\Notificaciones\notificacionesSvc.js" />
     <Content Include="App\Notificaciones\Partials\centroNotificaciones.html" />
+    <Content Include="App\Notificaciones\Partials\detalleNotificacionExperiencia.html" />
+    <Content Include="App\Notificaciones\Partials\detalleNotificacionPostulacion.html" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
     <Content Include="App\Ofertas\Partials\ofertaDetalle.html" />
