--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -94,6 +94,7 @@
     <Content Include="App\Notificaciones\notificacionesSvc.js" />
     <Content Include="App\Notificaciones\Partials\centroNotificaciones.html" />
     <Content Include="App\Notificaciones\Partials\detalleNotificacionExperiencia.html" />
+    <Content Include="App\Notificaciones\Partials\detalleNotificacionInvOfertaPrivada.html" />
     <Content Include="App\Notificaciones\Partials\detalleNotificacionPostulacion.html" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
