--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -117,6 +117,7 @@
     <Content Include="App\Profesionales\Partials\profesionalPerfilPublico.html" />
     <Content Include="App\Profesionales\Partials\profesionalPerfilOld.html" />
     <Content Include="App\Puestos\Partials\puestoDetalle.html" />
+    <Content Include="App\Puestos\Partials\puestoDetalleOferta.html" />
     <Content Include="App\Puestos\Partials\puestosAdd.html" />
     <Content Include="App\Puestos\puestosCtrl.js" />
     <Content Include="App\Puestos\puestosDf.js" />
