cambios en el perfil del profesional agrego botones para invitar a una oferta que abre el listado, agrego botones para ocultar un poco el perfil completo

--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -96,6 +96,7 @@
     <Content Include="App\Notificaciones\Partials\detalleNotificacionExperiencia.html" />
     <Content Include="App\Notificaciones\Partials\detalleNotificacionInvOfertaPrivada.html" />
     <Content Include="App\Notificaciones\Partials\detalleNotificacionPostulacion.html" />
+    <Content Include="App\Ofertas\Partials\ofertasPrivadasList.html" />
     <Content Include="App\Ofertas\Partials\ofertaPrivada.html" />
     <Content Include="App\Ofertas\Partials\ofertasAdd.html" />
     <Content Include="App\Ofertas\Partials\ofertasList.html" />
