--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -69,6 +69,10 @@
     <Content Include="App\DashboardProfesional\Partials\profesionalDashboard.html" />
     <Content Include="App\DashboardProfesional\Partials\profesionalContenido.html" />
     <Content Include="App\DashboardProfesional\Partials\profesionalMenu.html" />
+    <Content Include="App\Empleados\empleadosCtrl.js" />
+    <Content Include="App\Empleados\empleadosDF.js" />
+    <Content Include="App\Empleados\Partials\empleadoAdd.html" />
+    <Content Include="App\Empleados\Partials\empleadosList.html" />
     <Content Include="App\Empresas\Partials\empresaPerfilPublico.html" />
     <Content Include="App\EtapasOferta\etapasOfertaCtrl.js" />
     <Content Include="App\EtapasOferta\etapasOfertaDF.js" />
